# jiduoduo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  login-password-less.php  pyproject.toml  redis.conf  supervisor.conf
debug/: debug_postgresql.py  debug_redis.py  debug_webserver.py  debug_worker.py
docker/: docker-compose.yml
src/jiduoduo/: __init__.py  app.py  cli.py  config.py
src/jiduoduo/blueprints/: __init__.py  main.py  testing.py  user.py  vps.py
src/jiduoduo/forms/: base.py  testing.py  user.py  vps.py
src/jiduoduo/models/: __init__.py  base.py  testing.py  user.py  vps.py
src/jiduoduo/services/testing/: __init__.py  backtrace.py  base.py  bash_icu_gb5.py  bash_icu_speed_test.py  check_unlock_media.py  dd.py  df_h.py  ecs.py  free_h.py  gb5.py  hyper_speed.py  ip_check.py  ip_check_place.py  ip_info_io.py  ip_sb_4.py  ip_sb_6.py  login.py  memory_check.py  next_trace.py  nws_global.py  region_restriction_check.py  spiritlhls_ecs.py  spiritlhls_ecs_speed.py  yabs_basic_sys_info.py  yabs_default.py  yabs_disk.py  yabs_gb5.py
src/jiduoduo/tasks/: __init__.py  base.py  testing.py
src/jiduoduo/templates/frame/: base.html
src/jiduoduo/templates/main/: index.html
src/jiduoduo/templates/template/: bootstrap.html
src/jiduoduo/templates/testing/: create.html  detail.html  list.html
src/jiduoduo/templates/user/: login.html  register.html  setting.html
src/jiduoduo/templates/vps/: create.html  detail.html  list.html
src/jiduoduo/utils/: fabric_utils.py
