[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'jiduoduo'
version = '0.0.1'
requires-python = '>=3.11,<3.12'
dependencies = [
    'click==8.1.7',
    'Werkzeug==3.0.3',
    'Flask==3.0.3',
    'psycopg2-binary==2.9.9',
    'SQLAlchemy==2.0.31',
    'Flask-SQLAlchemy==3.1.1',
    'Flask-Login==0.6.3',
    'email_validator==2.2.0',
    'WTForms==3.1.2',
    'Flask-WTF==1.2.1',
    'gevent==24.2.1',
    'gunicorn==22.0.0',
    'invoke==2.2.0',
    'paramiko==3.4.0',
    'fabric2==3.2.2',
    'sshtunnel==0.4.0',
    'redis==5.0.7',
    'celery==5.4.0',
    'Flask-CeleryExt==0.5.0',
    'pendulum==3.0.0',
    'pydantic==2.7.4',
    'pydantic-settings==2.3.4',
    'filelock==3.15.4',
    'pyte==0.8.2',
]

[project.scripts]
jiduoduo = 'jiduoduo.cli:cli'

[tool.setuptools.packages.find] # https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
where = ['src']
include = ['*']

[tool.setuptools.package-data]
'*' = ['*.*']
